# honeybee

./: '  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_DOCKER.sh  CHANGELOG.md  Cargo.toml  Dockerfile  KICK_TIRES.sh  LICENSE  LICENSE.txt  LOAD_DOCKER.sh  Makefile  README.md  RUN_DOCKER.sh  RUN_EVAL.sh  RUN_EXTRA_FULL_EVAL.sh  RUN_FULL_EVAL.sh  RUN_ONLY_PBN_EVAL.sh  RUN_QUICK_BASELINE.sh  RUN_QUICK_EVAL.sh  SAVE_DOCKER.sh  bio.sh  cea.vim  elm.js  hb  honeybee.vim  index.html  lib.cea  lib.lisp  main.css  main.js  publish.sh  src.cea  src.lisp  std-bio-example.hb.toml  std-bio.hblib.toml  test.foo
.github/: CODEOWNERS  condition-grammar.md
.github/workflows/: backend-tests.yml  engine-tests.yml  tests.yml
artifact-eval/: README.md
artifact-eval/pldi25/: ARCHITECTURE.md
backend/: Cargo.toml  Makefile  do.sh
backend/next/: pbn.rs
backend/output/: Output.ipynb  crispr-screen.ipynb  notebook.ipynb  notebook2.ipynb  test.ipynb
backend/src/: analysis.rs  backend.rs  benchmark.rs  benchmark_data.rs  cellgen.rs  codegen.rs  controller_menu.rs  core.rs  datalog.rs  derivation.rs  dl_oracle.rs  egglog.rs  egglog_adapter.rs  enumerate.rs  eval.rs  hybrid_oracle.rs  ir.rs  lang.rs  lib.rs  main.rs  main_handler.rs  menu.rs  parse.rs  pbn.rs  run.rs  syntax.rs  synthesis.rs  task.rs  top_down.rs  top_level.rs  traditional_synthesis.rs  typecheck.rs  unparse.rs  util.rs
backend/src/next/: core.rs  datalog.rs  dl_oracle.rs  egglog.rs  enumerate.rs  mod.rs  pbn.rs  timer.rs  top_down.rs  traditional_synthesis.rs  util.rs
backend/src/next/old/: old_core.rs
backend/src/prev/: analysis.rs  derivation.rs  enumerate.rs  ir.rs  pbn.rs  run.rs  syntax.rs  task.rs  util.rs
backend/tests/: benchmark_checks.rs
benchmark/analysis/: .analyze.py.swp  All.html  Any.html  algorithm_metadata.csv  analyze.py  chart.html  completed.html  lib.py  pyproject.toml
benchmark/data/: tmp.csv
benchmark/next/: bio.hblib.toml  bio_rna_seq.hb.toml  prog.hb.toml
benchmark/suites/: particular_driver.py
compendium/: DEPENDENCIES.txt  run.sh
compendium/benchmark_suite/: _suite.hblib  crispr-screen.json  rna-seq.json
compendium/python/: requirements.txt
docs/: RELEASING.md
docs/hbimport_rpc/: server.sh
editor/: Makefile  biome.json  elm.json  publish.sh  stable-publish.sh  unstable-publish.sh
editor/src/: Annotations.elm  Assoc.elm  Cell.elm  Compile.elm  Complete.elm  Core.elm  Decode.elm  Incoming.elm  Main.elm  Outgoing.elm  Update.elm  Util.elm  Version.elm  View.elm
editor/www/: CNAME  example.hb.toml  hb-bio.sh  index.html  main.css  main.js  std-bio.hblib.toml
engine/: Cargo.toml  DEPENDENCIES.md  build.rs  enable_logging.fish  fuseflow.hblib.toml  fuseflow_anno.hblib.toml  honeybee.pyi  pyproject.toml  sam_fused.hb.toml  sam_fused2.hb.toml
engine/src/: big_step.rs  cellgen.rs  codegen.rs  core.rs  dl_oracle.rs  enumerate.rs  lib.rs  machine_readable.rs  main.rs  main_handler.rs  menu.rs  top_down.rs  traditional_synthesis.rs
examples/: biology.hblib  biology.py  crispr-screen.hb  crispr-sort-screen.hb  old-biology.hblib  rna-seq.hb
examples/gen-dessert/: _suite.hblib.toml  gen_dessert.hb.toml
examples/try-infinite/: _suite.hblib.toml  try_infinite.hb.toml
frontend/: Makefile  biome.json  elm-analyse.json  elm.json  hblib  index.html  main.css  main.js  publish.sh
frontend/src/: Assoc.elm  Cell.elm  Compile.elm  Complete.elm  Config.elm  Core.elm  Decode.elm  Incoming.elm  Main.elm  Model.elm  Outgoing.elm  Port.elm  Update.elm  Util.elm  Version.elm  View.elm
frontend/www/: CNAME  bio.hblib.toml  example.hb.toml  index.html  main.css  main.js  std-bio-example.hb.toml  std-bio.hblib.toml
gui/: CNAME  biology.hblib  biology.py  blocks.js  index.html  main.css  main.js  package-lock.json  package.json
hbimport/: .gitignore  hi.html  llm_test.py  main.py  pyproject.toml  scrape.py  step.py
honey/: honey_lang.py  pyproject.toml
honey_lang/: README.md  honey_lang.py  pyproject.toml
honey_libs/: README.md  fuseflow.py  pyproject.toml  sparse_anno.py  std-bio.py
honey_libs/bio/: bio.py  entrypoint.sh  hb-bio.sh  pyproject.toml
honey_libs/bio/environment/: sleuth.r  tximport.r
honey_libs/bio/playground/: example.hb.toml
honey_libs/environment/: .gitignore  analysis.ipy  comparisons.csv  main.py  sleuth.r  test.ipy
honey_libs/environment/metadata/: samples.csv
honey_libs/fuseflow/: fuseflow.py  pyproject.toml
honey_libs/playground/: sra.csv
honey_libs/std-bio/: .gitignore  Dockerfile  Makefile  README.md  container-start.sh  edit-warning.md  entrypoint.sh  hb-bio.sh  pyproject.toml  run.sh  std-bio.py
honey_libs/std-bio/environment/: LEMONmC.py  _DO_NOT_EDIT.md  deseq2.r  install_dependencies.r  tximport.r
honey_libs/std-bio/image-dependencies/: pyproject.toml
honey_libs/std-bio/image-environment/: deseq2.r
honey_libs/std-bio/playground/: EM_seq_pipeline.ipynb  comparison_sheet.csv  sample_sheet.csv
library-generator/: README.md  example.py  ice-cream.py  lib.py  palette.py  pyproject.toml  std-bio.py
library-generator/environment/: analysis.py  pyproject.toml  tximport.r
library-generator/playground/: sra.csv
libs/bio/: Dockerfile  Makefile  README.md  bio.py  entrypoint.sh  hb-bio.sh  pyproject.toml
libs/bio/environment/: deseq2.r
libs/bio/image-files/: entrypoint.sh
libs/bio/playground/: comparison_sheet.csv
libs/fuseflow/: fuseflow_scorch.py  pyproject.toml
output/: test.ipynb
pkg/: LICENSE.txt  honeybee.d.ts  honeybee.js  honeybee_bg.wasm  honeybee_bg.wasm.d.ts  package.json
protocols/: crispr-screen.cea  dev_requirements.txt  flow-time-course.cea  lib.cea  lib.py  requirements.txt  rna-seq.cea
python/: requirements.txt
site/: index.html  main.css
src/: analysis.rs  backend.rs  derivation.rs  egglog_adapter.rs  ir.rs  lib.rs  main.rs  parse.rs  syntax.rs  synthesis.rs  top_level.rs
support/: honeybee.vim
unstable/: bio.hblib.toml  elm.js  index.html  main.css  main.js  std-bio.hblib.toml
unstable/pkg/: honeybee.d.ts  honeybee.js  honeybee_bg.wasm  honeybee_bg.wasm.d.ts  package.json
(+914 files in other folders)
