[package]
name = "cea2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
ariadne = "0.4.0"
chumsky = "0.9.3"
egglog = { git = "https://github.com/egraphs-good/egglog.git" }
env_logger = "0.11.3"
ipynb = "0.0.1"
log = "0.4.21"
rustpython-ast = "0.3.1"
rustpython-parser = "0.3.1"
serde_json = "1.0.117"
termtree = "0.4.1"
