[package]
name = "honeybee"
version = "0.1.0"
authors = ["Justin Lubin <justin@jlubin.net>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/justinlubin/honeybee"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
ariadne = "0.4.0"
chumsky = "0.9.3"
egglog = "0.2.0"
env_logger = "0.11.3"
ipynb = "0.0.1"
log = "0.4.21"
rustpython-ast = "0.3.1"
rustpython-parser = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde-wasm-bindgen = "0.4"
termtree = "0.4.1"
wasm-bindgen = "0.2.92"

# To get WASM to work
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
debug = false
