[package]
name = "honeybee"
version = "0.4.0"
authors = ["Justin Lubin <justin@jlubin.net>"]
description = "Programming by Navigation with Honeybee"
edition = "2021"
readme = "README.md"
repository = "https://github.com/justinlubin/honeybee"
license = "BSD-3-Clause"

[dependencies]
# To get WASM to work
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
getrandom = { version = "0.2", features = ["js"] }

# Dependencies
ansi_term = "0.12.1"
ariadne = "0.4.0"
chumsky = "0.9.3"
egglog = "0.4.0"
env_logger = "0.11.3"
ipynb = "0.0.1"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde-wasm-bindgen = "0.4"
termtree = "0.4.1"
wasm-bindgen = "0.2.92"
clap = { version = "4.5.17", features = ["derive"] }
glob = "0.3.1"
csv = "1.3.0"
rayon = "1.10.0"
indexmap = { version = "2.7.0", features = ["serde"] }
toml = "0.8.19"
pbn = "0.3.0"
regex = "1.12.2"
convert_case = "0.10.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true

[lints.clippy]
new_without_default = "allow"
