[project]
name = "honey-libs"
version = "0.4.0"
description = "Honeybee libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cutadapt>=5.1",
    "honey-lang",
    "multiqc>=1.30",
    "polars>=1.33.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=9.2.0",
    "ty>=0.0.1a20",
]

[tool.uv.sources]
honey-lang = { path = "../honey_lang", editable = true }

[tool.ty.environment]
extra-paths = ["../honey_lang"]
