[project]
name = "honeybee-library-generator"
version = "0.1.0"
description = "Define Honeybee libraries using Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cutadapt>=5.1",
    "multiqc>=1.30",
    "mypy>=1.17.1",
    "polars>=1.33.0",
    "ty>=0.0.1a20",
]

[tool.uv]
dev-dependencies = [
    "ipython>=9.2.0",
]

[tool.uv.workspace]
members = [
    "environment",
]
