[project]
name = "hblib-stdbio"
version = "0.5.0"
description = "Standard Bio Honeybee Library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cutadapt>=5.1",
    "honey-lang",
    "multiqc>=1.30",
    "polars>=1.33.0",
]

[tool.uv.sources]
honey-lang = { path = "../../honey_lang", editable = true }

[tool.ty.environment]
extra-paths = ["../../honey_lang"]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "ty>=0.0.12",
]
