[project]
name = "hblib-stdbio"
version = "0.7.0"
description = "Honeybee Biology Library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=6.1.0",
    "cutadapt>=5.1",
    "honey-lang",
    "ipython>=9.9.0",
    "multiqc>=1.30",
    "polars>=1.33.0",
    "pysam>=0.24.0",
]

[tool.uv.sources]
honey-lang = { path = "../../honey", editable = true }

[tool.ty.environment]
extra-paths = ["../../honey"]

[tool.ty.src]
include = ["bio.py"]

[dependency-groups]
dev = [
    "globus-cli>=3.41.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "ty>=0.0.12",
]
