[project]
name = "hblib-fuseflow"
version = "0.7.0"
description = "FuseFlow Honeybee Library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "honey-lang",
    "polars>=1.41.0",
]

[tool.uv.sources]
honey-lang = { path = "../../honey", editable = true }

[tool.ty.environment]
extra-paths = ["../../honey"]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "ty>=0.0.12",
]
